infrastructure/configs/gateway/gateways.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: http-s
  namespace: kgateway-system
spec:
  gatewayClassName: kgateway
  # defaultScope: All # not supported in stable release?
  allowedListeners:
    namespaces:
      from: All
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - allowedRoutes:
        namespaces:
          from: All
      hostname: test.k8s.doblerones.de
      name: https
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - group: ""
            kind: Secret
            name: test-tls
        mode: Terminate
    - allowedRoutes:
        namespaces:
          from: All
      hostname: test-ingress.k8s.doblerones.de
      name: https-ingress
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - group: ""
            kind: Secret
            name: test-ingress-tls
        mode: Terminate
    - allowedRoutes:
        namespaces:
          from: All
      name: https-passthrough
      port: 443
      protocol: TLS
      tls:
        mode: Passthrough
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: mail
  namespace: kgateway-system
spec:
  gatewayClassName: kgateway
  allowedListeners:
    namespaces:
      from: Selector
      selector:
        matchLabels:
          kubernetes.io/metadata.name: stalwart
  listeners:
    - name: dummy
      hostname: dummy
      protocol: TLS
      port: 465
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          # yaml-language-server-disable Value is not accepted. Valid values: "All", "Selector", "Same".
          from: None
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: pp-test
  namespace: kgateway-system
spec:
  infrastructure:
    parametersRef:
      group: gateway.kgateway.dev
      kind: GatewayParameters
      name: service-traffic-policy-local
  gatewayClassName: kgateway
  listeners:
    - name: http-alt
      protocol: HTTP
      port: 8080
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: pp-test
