infrastructure/configs/gateway/httpsRedirect.yaml
---
# Catch-all redirect route (low specificity)
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-to-https-redirect
  namespace: kgateway-system
spec:
  parentRefs:
    - name: http-s
      kind: Gateway
      sectionName: http # attaches only to the HTTP listener
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
